@@ -84,6 +84,10 @@ gpointer generic_sequence_worker(gpointer p) {
 	float nb_framesf = (float)nb_frames + 0.3f;	// leave margin for rounding errors and post processing
 	args->retval = 0;
 
+	// If the sequence is of type SEQ_AVI, lock out the sequence browser as it can cause a crash
+	if (args->seq->type == SEQ_AVI && !com.headless) {
+		gui_function(set_seq_browser_active, GINT_TO_POINTER(0));
+	}
 #ifdef _OPENMP
 	// max_parallel_images can be computed by another function too, hence the check
 	if (args->max_parallel_images < 1) {
@@ -375,6 +379,8 @@ the_end:
 		args->retval = 1;
 	}
 	int retval = args->retval;	// so we can free args if needed in the idle
+	if (args->seq->type == SEQ_AVI && !com.headless)
+		gui_function(set_seq_browser_active, GINT_TO_POINTER(1)); // re-enable the sequence browser if necessary
 
 	if (!args->already_in_a_thread) {
 		gboolean run_idle;
