@@ -2349,3 +2349,15 @@ GPid show_child_process_selection_dialog(GSList *children) {
 
 	return selected_pid;
 }
+
+gboolean set_seq_browser_active(gpointer user_data) {
+	gboolean state = (gboolean) GPOINTER_TO_INT(user_data);
+	if (!state) { // Deactivating: check if the dialog is already open, if so close it
+		if (gtk_widget_is_visible(lookup_widget("seqlist_dialog"))) {
+			siril_close_dialog("seqlist_dialog");
+		}
+	}
+	GtkWidget *widget = lookup_widget("seqlist_button");
+	gtk_widget_set_sensitive(widget, state);
+	return FALSE;
+}
